--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "homepage": "https://github.com/andrewcpacifico/organizar-api#readme",
   "dependencies": {
     "bluebird": "^3.5.0",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "merge": "^1.2.0",
+    "mysql": "^2.13.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
