--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node .",
     "lint": "eslint server.js src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -27,11 +27,15 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "express": "^4.15.2",
+    "jsdoc": "^3.4.3",
     "merge": "^1.2.0",
     "mysql": "^2.13.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.19.0",
-    "eslint-config-google": "^0.7.1"
+    "eslint-config-google": "^0.7.1",
+    "mocha": "^3.2.0",
+    "sinon": "^2.1.0"
   }
 }
