--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       dockerfile: Dockerfile-local
     environment:
       - PORT=9998
-      - MYSQL_ROOT_PASSWORD=root123
+      - MYSQL_PASSWORD=root123
     depends_on:
       - mysql
     ports:
